--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="dropdown">
             <button onclick="Dropdown()" class="dropbtn">Fragment Shaders</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="Shaders\Screensaver.html">Screensaver</a>
+              <a href="Shaders/Screensaver.html">Screensaver</a>
               <a href="Shaders/Sdf.html">Sdf introduction</a>
             </div>
           </div>
