--- a/Shaders/Screensaver.html
+++ b/Shaders/Screensaver.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3s4Wz6iJgD/+ub2oU" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Shadering w/furry</title>
     <link rel="stylesheet" type="text/css" href="../Home.css">
     <link rel="stylesheet" type="text/css" href="Screensaver.css">
     <header>
-        <h1 class="centered">Screensaver</h1>
-        <p class="centered">A simple shader in a senoidal wave</p>
+        <h1 class="centered">Salvapantallas</h1>
+        <p class="centered">Un sombreador simple en una onda senoidal.</p>
     </header>
 </head>
 
 <body>
+    <a href="../index.html" title="Home" class="home-button">
+        <i class="fas fa-home"></i>
+    </a>
     <main>
-        <h2>UV setup</h2>
+        <h2>Mapa "UV" y su manejo</h2>
         <section>
-            <p>First we will modify UV so it “moves” to the center starting at (-1,-1) and ending at (1,1) for that we take f(x,y) = (Coord.xy / (Resolution.xy * 2.0))- 1.0 that way let's take a coordinate (1980/2,1080/2) the middle and input it getting f(1980/2,1080/2)= (1980/2,1080/2)/(1980,1080)*2.0 we can simplify to (1980,1080)/(1980,1080)- 1.0 that way the output is the value (0.0,0.0)</p>
-            <p>This part can be skipped but we will make the uv a square so the diagonal gives a module of 1 (the uv = square) to do that we multiply the UV.x x coordinate which is the bigger one by the relation between the Resolution.x/Resolution.y relation that way we get square</p>
+            <p>Primero modificaremos UV para que se “mueva” hacia el centro comenzando en (-1,-1) y terminando en (1,1) para eso tomamos f(x,y) = (Coord.xy / ( Resolución.xy * 2.0))- 1.0 de esa manera tomemos una coordenada (1980/2,1080/2) en el medio e ingresémosla obteniendo f(1980/2,1080/2)= (1980/2,1080/2) /(1980,1080)*2.0 podemos simplificar a (1980,1080)/(1980,1080)- 1.0 de esa manera la salida es el valor (0.0,0.0)</p>
+            <p>Esta parte se puede omitir pero haremos que la uv sea un cuadrado para que la diagonal dé un módulo de 1 (la uv = cuadrado) para ello multiplicamos la coordenada UV.x x que es la más grande por la relación entre las Relación Resolución.x/Resolución.y de esa manera obtenemos cuadrado</p>
             <img src="UVmapD.png" class="uvMAP">
         </section>
         <section>
-            <h2>Math and reasoning</h2>
-            <p>Ok so for this screen saver we are gonna make some balls that appear to stay floating around a fixed point well to do that we will Determine a circle's position as a vector that avanzes through time on a senoidal wave that way we get the function f(x,y) = cos(iTime)*x + sin(iTime) * y now we have their positions but to draw them we need a radius and to make it a bit more dynamic we will make it dependent on time r(x) = (0.1 + sin(iTime * 0.7) * 0.1 )* x; now to make them colourfull we will change the r,g,b with this function (trying different constants and changing them results on different color patterns)</p>
+            <h2>Matemáticas y razonamiento</h2>
+            <p>Bien, para este protector de pantalla vamos a hacer algunas bolas que parecen permanecer flotando alrededor de un punto fijo. Para ello determinaremos la posición de un círculo como un vector que avanza a través del tiempo en una onda senoidal de esa manera obtenemos el función f(x,y) = cos(iTime)*x + sin(iTime) * y ahora tenemos sus posiciones pero para dibujarlas necesitamos un radio y para hacerlo un poco más dinámico lo haremos dependiente del tiempo r (x) = (0,1 + sin(iTiempo * 0,7) * 0,1 )* x; ahora para hacerlos más coloridos cambiaremos r,g,b con esta función (probando diferentes constantes y cambiándolas se obtienen diferentes patrones de color)</p>
             <Math>
                 rgb(r,g,b) = r* vec3(sin(iTime * 0.5) * 0.5 + 0.5+ g * sin(iTime * 0.6) * 0.5 + 0.5+ b * sin( * 0.4 + iTime * 0.7) * 0.5 + 0.5)
             </Math>
-            <p>Now to have more than 1 ball we will have a variable i that loops these trough x amount of balls and augmenting 1 by each and to make the balls different in color and radius and etc we will put the variable i itself on the function such as</p>
+            <p>Ahora, para tener más de 1 bola, tendremos una variable i que recorre estos canales a través de x cantidad de bolas y aumenta 1 en cada una y para hacer que las bolas sean diferentes en color y radio, etc., pondremos la variable i en la función, como por ejemplo </p>
             <Math>
                 rgb(r,g,b) = vec3(sin(float(i) + iTime) + sin(float(i) + iTime)+ sin(float(i) + iTime));
                 r(x) = (0.1 + sin(iTime * 0.7 + float(i) * 0.4) * 0.1 )* x;
                 f(x,y) = vec2(cos(iTime * 0.5 + float(i) * 0.3) * 0.5*x + sin(iTime * 0.3  + float(i) * 0.7) * 0.5) * y;
             </Math>
-            <p>That would be it… now translating it to glsl code it will give us this functions</p>
+            <p>Eso sería todo… ahora traduciéndolo a código glsl nos dará estas funciones</p>
         </section>
         <section>
             <pre><code>
@@ -54,7 +58,7 @@
                     }
                 }
             </code></pre>
-            <h2>Now the actual computed shader</h2>
+            <h2>Y... al final obtenemos esto</h2>
         </section>
         <canvas id="space" class="container2"></canvas>
         <script src="Shader.js"></script>
