--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shadering w/furry</title>
+    <title>Hacked ;) nah jk Shadering w/furry</title>
     <link rel="stylesheet" type="text/css" href="Home.css">
     <script src="Home.js"></script>
     <header>
